upto CS4 report created

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "id": "biological-million",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'distance': 48.2, 'index': 97},\n",
-       " {'distance': 207.3, 'index': 98},\n",
-       " {'distance': 297.3, 'index': 92},\n",
-       " {'distance': 314.4, 'index': 94}]"
+       "[{'distance': 231.5, 'index': 94},\n",
+       " {'distance': 326.1, 'index': 99},\n",
+       " {'distance': 380.0, 'index': 72},\n",
+       " {'distance': 441.2, 'index': 97}]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,20 +81,20 @@
     "testData = testDF.values\n",
     "\n",
     "\n",
-    "manDistances = PrintManhattan(testData[0])\n",
-    "eucDistances = PrintEuclidean(testData[0])\n",
-    "avgDistances = PrintAvg(testData[0])\n",
+    "manDistances = PrintManhattan(testData[3])\n",
+    "eucDistances = PrintEuclidean(testData[3])\n",
+    "avgDistances = PrintAvg(testData[3])\n",
     "\n",
     "\n",
     "sortedManDistances = sorted(manDistances, key = lambda i: i['distance'])\n",
-    "# PrintArray(i[\"distance\"] for i in avgDistances)\n",
+    "# PrintArray(i[\"distance\"] for i in manDistances)\n",
     "sortedManDistances[:4]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mature-cincinnati",
+   "id": "aging-efficiency",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "likely-thomas",
+   "id": "expanded-cleaner",
    "metadata": {},
    "outputs": [],
    "source": []
